--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sentimentanalysis</groupId>
-    <artifactId>word-frequency-lemmatization</artifactId>
+    <artifactId>word-sentiment-score</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -62,7 +62,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>Task2.WordFreqLemmatizationDriver</mainClass>
+                            <mainClass>Task3.WordSentimentScoreDriver</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
