--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>2.3.9</version>
+            <scope>provided</scope>
+            <exclusions>
+            <exclusion>
+                <groupId>org.pentaho</groupId>
+                <artifactId>pentaho-aggdesigner-algorithm</artifactId>
+            </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
     <build>
